# bitbucket-cli

./: .gitignore  README.md  pyproject.toml  write_impls.py
.github/workflows/: ci.yml  publish.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  AUTH.md  CHANGELOG.md  PUBLISHING.md  RUNBOOK.md  TESTING.md
scripts/: quality.sh  setup.sh
src/bb/: __init__.py  cli.py  main.py
src/bb/commands/: api.py  auth.py  branch.py  browse.py  config_cmd.py  doctor.py  issue.py  mcp.py  pipeline.py  pr.py  project.py  repo.py  search.py  snippet.py  status.py  workspace.py
src/bb/core/: auth.py  client.py  config.py  context.py  ctx.py  deployment.py  errors.py  oauth.py  out.py  output.py  validation.py
tests/: conftest.py  test_api_cmd.py  test_api_extended.py  test_auth.py  test_auth_cmd.py  test_auth_cmd_edges.py  test_auth_extended.py  test_auth_matrix.py  test_auth_refresh.py  test_auth_store.py  test_branch.py  test_browse.py  test_browse_extended.py  test_cfg.py  test_cli.py  test_cli_smoke.py  test_client.py  test_client_edges.py  test_client_extended.py  test_client_raw.py  test_config.py  test_config_cmd.py  test_context.py  test_ctx.py  test_ctx_module.py  test_datacenter.py  test_deployment.py  test_doctor.py  test_issue.py  test_keyring.py  test_mcp.py  test_oauth.py  test_pipeline.py  test_pr.py  test_pr_extended_cmd.py  test_project.py  test_repo.py  test_repo_extended.py  test_search.py  test_snippet.py  (+3 more)
tmp/: plan.md
