[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbucket-cli"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "Misha Lubich", email = "mlubich@polariswireless.com"},
]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "platformdirs>=4",
    "tomlkit>=0.13",
    "click>=8.4.1",
]

[project.urls]
Homepage = "https://mishalubich.com"
Repository = "https://github.com/ml-lubich"

[project.scripts]
bb = "bb.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
