[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbucket-client"
version = "0.3.1"
description = "Lightweight gh-style CLI for Bitbucket Cloud and Data Center"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Misha Lubich", email = "mlubich@users.noreply.github.com"},
]
license = {text = "MIT"}
keywords = ["bitbucket", "cli", "git", "pull-request", "devops", "gh", "mcp", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "platformdirs>=4",
    "tomlkit>=0.13",
    "click>=8.4.1",
    "pydantic>=2.10",
    "keyring>=25",
]

[project.urls]
Homepage = "https://github.com/ml-lubich/bitbucket-cli"
Repository = "https://github.com/ml-lubich/bitbucket-cli"
Issues = "https://github.com/ml-lubich/bitbucket-cli/issues"

[project.scripts]
bb = "bb.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.coverage",
    "/.github",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.venv",
    "/coverage.json",
    "/dist",
    "/tmp",
    "/venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["bb"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
files = ["src/bb"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "B904", "E501"]
